src/core/c_api/itscam_cgi_client_c.h

/* ============================================================================
 *  Opaque handles
 * ============================================================================ */

typedef struct ITSCAM_CgiClient      ITSCAM_CgiClient;
/* ============================================================================
 *  Lifecycle
 * ============================================================================ */

ITSCAM_C_API ITSCAM_CgiClient* ITSCAM_CgiClient_create(void);
ITSCAM_C_API void              ITSCAM_CgiClient_destroy(ITSCAM_CgiClient*);
/* ============================================================================
 *  Connection / TLS
 * ============================================================================ */

ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_CgiClient_setBaseUrl(
    ITSCAM_CgiClient* client, const char* host, uint16_t port,
    const char* scheme);
ITSCAM_C_API void ITSCAM_CgiClient_setApiPrefix(
    ITSCAM_CgiClient* client, const char* prefix);
ITSCAM_C_API void ITSCAM_CgiClient_setCaCertFile(
    ITSCAM_CgiClient* client, const char* pemPath);
ITSCAM_C_API void ITSCAM_CgiClient_setCaCertData(
    ITSCAM_CgiClient* client, const char* pem);