src/core/c_api/itscam_rest_client_c.h

/* ============================================================================
 *  Opaque handles
 * ============================================================================ */

typedef struct ITSCAM_RestClient ITSCAM_RestClient;
/// UTF-8 NUL-terminated string buffer owned by the SDK.
typedef struct ITSCAM_String ITSCAM_String;
/* ============================================================================
 *  Lifecycle
 * ============================================================================ */

/// Allocate a new REST client.  Returns NULL on out-of-memory.
ITSCAM_C_API ITSCAM_RestClient* ITSCAM_RestClient_create(void);
/// Free a REST client.  Safe to call with NULL.
ITSCAM_C_API void ITSCAM_RestClient_destroy(ITSCAM_RestClient* client);
/* ============================================================================
 *  Connection / TLS
 * ============================================================================ */

/// Configure host, port and scheme.  scheme is "http" (default) or "https".
/// Pass port = 0 to use the protocol default (80 for http, 443 for https).
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_setBaseUrl(
    ITSCAM_RestClient* client,
    const char* host,
    uint16_t port,
    const char* scheme);
ITSCAM_C_API void ITSCAM_RestClient_setCaCertFile(
    ITSCAM_RestClient* client,
    const char* pemPath);
ITSCAM_C_API void ITSCAM_RestClient_setCaCertData(
    ITSCAM_RestClient* client,
    const char* pem);
ITSCAM_C_API void ITSCAM_RestClient_setVerifyServerCertificate(
    ITSCAM_RestClient* client,
    int verify);
ITSCAM_C_API void ITSCAM_RestClient_setClientCertificate(
    ITSCAM_RestClient* client,
    const char* certPem,
    const char* keyPem);
/* ============================================================================
 *  Authentication
 * ============================================================================ */

/// POST /api/auth and store the returned bearer token internally.
/// outResponse receives the JSON response (caller must release with
/// ITSCAM_String_destroy).  Pass NULL to discard.
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_login(
    ITSCAM_RestClient* client,
    const char* username,
    const char* password,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API void ITSCAM_RestClient_setAuthToken(
    ITSCAM_RestClient* client,
    const char* token);
ITSCAM_C_API void ITSCAM_RestClient_clearAuthToken(
    ITSCAM_RestClient* client);
/* ============================================================================
 *  Generic HTTP verbs (the typed helpers below are convenience wrappers)
 *
 *  All variants follow the same pattern:
 *      - path is taken verbatim
 *      - body (when applicable) is a UTF-8 JSON string
 *      - outResponse receives the parsed JSON response string (or NULL on
 *        failure); the caller must release it with ITSCAM_String_destroy
 * ============================================================================ */

ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_httpGet(
    ITSCAM_RestClient* client,
    const char* path,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_httpPut(
    ITSCAM_RestClient* client,
    const char* path,
    const char* jsonBody,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_httpPost(
    ITSCAM_RestClient* client,
    const char* path,
    const char* jsonBody,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_httpDelete(
    ITSCAM_RestClient* client,
    const char* path,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);