src/wrappers/csharp/Itscam.Sdk/Native/NativeMethods.cs


        [StructLayout(LayoutKind.Sequential)]
        internal struct NativeTimestamp
        {
            public ushort Year;
            public ushort Month;
            public ushort Day;
            public ushort Hour;
            public ushort Minute;
            public ushort Second;
            public ushort Millisecond;
            public int TimezoneOffset;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct NativeFrameInfo
        {
            public ulong RequestId;
            public ulong FrameCount;
            public int MultiExpIndex;
            public int MultiExpLength;
            public int Shutter;
            public float Gain;
            public uint Width;
            public uint Height;
            public NativeTimestamp Timestamp;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct NativeProfileInfo
        {
            public uint Id;
            public IntPtr Name;
            public IntPtr Description;
            public int IsActive;
        }

        internal static CaptureResult ToCaptureResult(IntPtr resultPtr)
        {
            if (resultPtr == IntPtr.Zero)
                return new CaptureResult(new FrameInfo(), Array.Empty<byte>());

            var info = CaptureResult_getInfo(resultPtr);
            var frame = new FrameInfo
            {
                RequestId = info.RequestId,
                FrameCount = info.FrameCount,
                MultiExpIndex = info.MultiExpIndex,
                MultiExpLength = info.MultiExpLength,
                Shutter = info.Shutter,
                Gain = info.Gain,
                Width = (int)info.Width,
                Height = (int)info.Height,
                Timestamp = new ItscamTimestamp
                {
                    Year = info.Timestamp.Year,
                    Month = info.Timestamp.Month,
                    Day = info.Timestamp.Day,
                    Hour = info.Timestamp.Hour,
                    Minute = info.Timestamp.Minute,
                    Second = info.Timestamp.Second,
                    Millisecond = info.Timestamp.Millisecond,
                    TimezoneOffsetMinutes = info.Timestamp.TimezoneOffset,
                },
            };

            IntPtr jpegPtr = CaptureResult_getJpeg(resultPtr, out UIntPtr jpegSize);
            byte[] jpeg = CopyBytes(jpegPtr, (int)jpegSize);

            int plateCount = (int)CaptureResult_getPlateCount(resultPtr);
            var plates = new string[plateCount];
            for (int i = 0; i < plateCount; ++i)
                plates[i] = PtrToStringUtf8(
                    CaptureResult_getPlate(resultPtr, (UIntPtr)i));

            return new CaptureResult(frame, jpeg, plates);
        }

        internal static IReadOnlyList<CaptureResult> TakeCaptureResults(IntPtr arrayPtr)
        {
            if (arrayPtr == IntPtr.Zero)
                return Array.Empty<CaptureResult>();

            try
            {
                int n = (int)CaptureResultArray_size(arrayPtr);
                var list = new List<CaptureResult>(n);
                for (int i = 0; i < n; ++i)
                {
                    var ptr = CaptureResultArray_get(arrayPtr, (UIntPtr)i);
                    list.Add(ToCaptureResult(ptr));
                }
                return list;
            }
            finally
            {
                CaptureResultArray_destroy(arrayPtr);
            }
        }

        internal static byte[] TakeByteArray(IntPtr arrayPtr)
        {
            if (arrayPtr == IntPtr.Zero)
                return Array.Empty<byte>();

            try
            {
                int n = (int)ByteArray_size(arrayPtr);
                if (n <= 0)
                    return Array.Empty<byte>();
                return CopyBytes(ByteArray_data(arrayPtr), n);
            }
            finally
            {
                ByteArray_destroy(arrayPtr);
            }
        }

        internal static IReadOnlyList<ProfileInfo> TakeProfiles(IntPtr arrayPtr)
        {
            if (arrayPtr == IntPtr.Zero)
                return Array.Empty<ProfileInfo>();

            try
            {
                int n = (int)ProfileArray_size(arrayPtr);
                var list = new List<ProfileInfo>(n);
                for (int i = 0; i < n; ++i)
                {
                    if (ProfileArray_get(arrayPtr, (UIntPtr)i,
                            out NativeProfileInfo native) == 0)
                        continue;

                    list.Add(new ProfileInfo
                    {
                        Id          = native.Id,
                        Name        = PtrToStringUtf8(native.Name),
                        Description = PtrToStringUtf8(native.Description),
                        IsActive    = native.IsActive != 0,
                    });
                }
                return list;
            }
            finally
            {
                ProfileArray_destroy(arrayPtr);
            }
        }

        // ====================================================================
        //  REST client (ITSCAM_RestClient)
        // ====================================================================

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_create",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr Rest_create();

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_destroy",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Rest_destroy(IntPtr client);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_setBaseUrl",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode Rest_setBaseUrl(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string host, ushort port,
            [MarshalAs(UnmanagedType.LPStr)] string scheme);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_setCaCertFile",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern void Rest_setCaCertFile(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string path);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_setCaCertData",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern void Rest_setCaCertData(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string pem);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_setVerifyServerCertificate",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Rest_setVerifyServerCertificate(IntPtr c,
            int verify);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_setClientCertificate",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern void Rest_setClientCertificate(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string certPem,
            [MarshalAs(UnmanagedType.LPStr)] string keyPem);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_login",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode Rest_login(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string user,
            [MarshalAs(UnmanagedType.LPStr)] string pass,
            uint timeoutMs, out IntPtr outResponse);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_setAuthToken",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern void Rest_setAuthToken(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string token);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_clearAuthToken",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Rest_clearAuthToken(IntPtr c);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_httpGet",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode Rest_httpGet(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string path, uint timeoutMs,
            out IntPtr outResponse);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_httpPut",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode Rest_httpPut(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string path,
            [MarshalAs(UnmanagedType.LPStr)] string body, uint timeoutMs,
            out IntPtr outResponse);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_httpPost",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode Rest_httpPost(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string path,
            [MarshalAs(UnmanagedType.LPStr)] string body, uint timeoutMs,
            out IntPtr outResponse);

        [DllImport(Lib, EntryPoint = "ITSCAM_RestClient_httpDelete",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode Rest_httpDelete(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string path, uint timeoutMs,
            out IntPtr outResponse);

        // ====================================================================
        //  CGI client (ITSCAM_CgiClient)
        // ====================================================================

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_create",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr Cgi_create();

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_destroy",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Cgi_destroy(IntPtr c);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_setBaseUrl",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode Cgi_setBaseUrl(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string host, ushort port,
            [MarshalAs(UnmanagedType.LPStr)] string scheme);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_setApiPrefix",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern void Cgi_setApiPrefix(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string prefix);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_setCaCertFile",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern void Cgi_setCaCertFile(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string path);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_setCaCertData",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern void Cgi_setCaCertData(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string pem);
